css/main.css
/*  Background love: https://www.svgbackgrounds.com/  */
:root {
  --accent-color: #2bb82b;
}

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  font-family: sans-serif;
}

body {
  background-color: black;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
  background-attachment: fixed;
  color: #fff;
}

.score-box {
  position: absolute;
  background-color: var(--accent-color);
  right: 0;
  padding: 5px 15px 8px 15px;
  border-radius: 0 0 0 20px;
  color: #fff;
  text-align: center;
  z-index: 10;
}

.turns {
  font-size: 0.8rem;
}

.score {
  font-size: 2rem;
}

.container {
  position: relative;
  width: 100vw;
  height: 95vh;
  display: -ms-grid;
  display: grid;
  place-content: center;
}

form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
}

.toggle {
  position: relative;
  margin: 25px 10px;
}

.checkbox {
  display: none;
}

.checkbox-label {
  display: block;
  width: 45px;
  height: 25px;
}

.checkbox-label::before,
.checkbox-label::after {
  content: "";
  display: block;
  position: absolute;
  cursor: pointer;
}

.checkbox-label::before {
  width: 100%;
  height: 100%;
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    from(rgb(91, 102, 202)),
    to(rgb(141, 115, 221))
  );
  background: -o-linear-gradient(left, rgb(91, 102, 202), rgb(141, 115, 221));
  background: linear-gradient(to right, rgb(91, 102, 202), rgb(141, 115, 221));
  border-radius: 1em;
  -webkit-transition: background-color 250ms ease;
  -o-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
}

.checkbox-label::after {
  top: 0;
  left: 0;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-color: #fff;
  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
  -webkit-transition: left 250ms ease;
  -o-transition: left 250ms ease;
  transition: left 250ms ease;
}

.checkbox:checked + .checkbox-label::before {
  background: -webkit-gradient(
    linear,
    left bottom,
    left top,
    from(rgb(181, 26, 0)),
    to(rgb(227, 0, 79))
  );
  background: -o-linear-gradient(bottom, rgb(181, 26, 0), rgb(227, 0, 79));
  background: linear-gradient(to top, rgb(181, 26, 0), rgb(227, 0, 79));
}

.checkbox:checked + .checkbox-label::after {
  left: 50%;
}

.board {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 10px;
  place-content: center;
}

.card {
  /* position: relative; */
  width: clamp(100px, 20vw, 200px);
  /* width: clamp(65px, 20vw, 200px); */
  /* height: clamp(65px, 20vw, 200px); */
  height: clamp(100px, 20vw, 200px);
  background: #fff;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 30px;
  -webkit-transition: -webkit-transform 0.6s;
  transition: -webkit-transform 0.6s;
  -o-transition: transform 0.6s;
  transition: transform 0.6s;
  transition: transform 0.6s, -webkit-transform 0.6s;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-box-shadow: 5px 5px 10px -5px rgba(0 0 0 / 40%);
  box-shadow: 5px 5px 10px -5px rgba(0 0 0 / 40%);
  cursor: pointer;
}

.flipped {
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.card-back,
.card-front {
  position: absolute;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.card-back {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;

  width: 100%;
  height: 100%;
  border-radius: 30px;
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    from(rgb(91, 102, 202)),
    to(rgb(141, 115, 221))
  );
  background: -o-linear-gradient(left, rgb(91, 102, 202), rgb(141, 115, 221));
  background: linear-gradient(to right, rgb(91, 102, 202), rgb(141, 115, 221));
}

.card-front {
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

img {
  width: 100px;
}

button {
  background-color: var(--accent-color);
  color: #fff;
  border: none;
  outline: none;
  border-radius: 20px;
  width: 200px;
  height: 50px;
  margin: 25px auto 0 auto;
  cursor: pointer;
  -webkit-filter: drop-shadow(5px 5px 8px rgba(0 0 0 / 20%));
  filter: drop-shadow(5px 5px 8px rgba(0 0 0 / 20%));
}

button:hover {
  background-color: rgb(44, 204, 44);
  -webkit-box-shadow: inset 2px 2px 5px rgba(0 0 0 / 15%);
  box-shadow: inset 2px 2px 5px rgba(0 0 0 / 15%);
}

.hide {
  -webkit-animation: hide 250ms linear forwards 700ms;
  animation: hide 250ms linear forwards 700ms;
}

.match-visual {
  border: 10px dashed var(--accent-color);
}

.hard-color {
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    from(rgb(181, 26, 0)),
    to(rgb(227, 0, 79))
  );
  background: -o-linear-gradient(left, rgb(181, 26, 0), rgb(227, 0, 79));
  background: linear-gradient(to right, rgb(181, 26, 0), rgb(227, 0, 79));
}

@-webkit-keyframes hide {
  to {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}

@keyframes hide {
  to {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}

.score-history-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 5px solid black;
  border-image-source: linear-gradient(
    to right,
    rgb(91, 102, 202),
    rgb(141, 115, 221)
  );
  border-image-slice: 1;
  width: 50vw;
  min-width: 325px;
  margin: 25px auto;
  padding: 20px 50px;
}

h1 {
  text-align: center;
}

header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 70%;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  margin: 8px auto;
  padding: 8px 0;
  background: #fff;
  color: #000;
  border-radius: 20px;
}

.score-display {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 70%;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  margin: 0 auto;
  padding: 15px 0;
  border-bottom: 1px dotted rgb(255 255 255 / 60%);
}

.score-display:last-child {
  border-bottom: none;
}

.congrats {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  width: clamp(300px, 500px, 50vw);
  z-index: 10;
  font-size: clamp(1.7rem, -0.875rem + 8.333vw, 2.5rem);
  font-weight: bold;
  text-align: center;
  -webkit-animation: grow 75ms linear forwards;
  animation: grow 75ms linear forwards;
}

.good::before {
  display: block;
  content: "Dude, are you even trying???";
}

.better::before {
  display: block;
  content: "That was pretty amazing!";
}

.best::before {
  display: block;
  content: "Omg, did you cheat?? That was awesome!!";
}

@-webkit-keyframes grow {
  100% {
    -webkit-transform: translate(-50%, -50%) scale(1);
    transform: translate(-50%, -50%) scale(1);
  }
}

@keyframes grow {
  100% {
    -webkit-transform: translate(-50%, -50%) scale(1);
    transform: translate(-50%, -50%) scale(1);
  }
}

.button-container {
  position: relative;
  margin: 0 auto;
}

.arrow {
  position: absolute;
  display: block;
  top: -100%;
  left: 37%;
  z-index: 10;
  width: 50px;
  visibility: hidden;
  -webkit-animation: blink 400ms linear 3;
  animation: blink 400ms linear 3;
}

@-webkit-keyframes blink {
  50% {
    visibility: hidden;
  }
  100% {
    visibility: visible;
  }
}

@keyframes blink {
  50% {
    visibility: hidden;
  }
  100% {
    visibility: visible;
  }
}

@media (orientation: landscape) and (max-height: 775px) {
  .card {
    width: clamp(75px, 20vh, 200px);
    height: clamp(75px, 20vh, 200px);
  }
}

@media screen and (max-width: 400px) {
  .container {
    height: 80vh;
  }

  /* testing  */
  .board {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  .card {
    border-radius: 15px;
  }

  .card-back {
    border-radius: 15px;
  }

  img {
    width: 50px;
  }

  .match-visual {
    border: 4px dashed var(--accent-color);
  }
}

